--- a/FoodHub/Views/Login/Index.cshtml
+++ b/FoodHub/Views/Login/Index.cshtml
@@ -18,14 +18,12 @@
             <div class="login-form">
                 <div class="sign-in-htm">
                     <div class="group">
-                        <label for="user" class="label">Username</label>
+                        @Html.LabelFor(m => m.USER_DETAILS.USER_NAME, new { @class = "label" })
                         @Html.TextBoxFor(m => m.USER_DETAILS.USER_NAME, new { id = "USER_NAME", @class = "form-control input", maxlength = 20, @placeholder = "Username" })
                     </div>
                     <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password">
-                        @Html.LabelFor(m=>m.USER_DETAILS.PASSWORD)
-                        @Html.PasswordFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "form-control input", maxlength = 20 })
+                        @Html.LabelFor(m => m.USER_DETAILS.PASSWORD, new { @class = "label" })
+                        @Html.PasswordFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "form-control input", maxlength = 32 })
                     </div>
                     <div class="group">
                         <input id="check" type="checkbox" class="check" checked>
@@ -41,24 +39,23 @@
                 </div>
                 <div class="sign-up-htm">
                     <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
-                        @Html.TextBoxFor(m => m.USER_DETAILS.USER_NAME, new { id = "USER_NAME", @class = "form-control input", maxlength = 20, @placeholder = "Username" })
+                        @Html.LabelFor(m => m.USER_DETAILS.USER_NAME, new { @class = "label" })
+                        @Html.TextBoxFor(m => m.USER_DETAILS.USER_NAME, new { id = "USER_NAME", @class = "form-control input", @maxlength = 20, @placeholder = "Username" })
                     </div>
 
                     <div class="group">
-                        <label for="pass" class="label">Email Address</label>
-                        <input id="pass" type="text" class="input">
-                        @Html.TextBoxFor(m => m.USER_DETAILS.EMAIL, new { id = "EMAIL", @class = "form-control input" })
+                        @Html.LabelFor(m => m.USER_DETAILS.EMAIL, new { @class = "label" })
+                        @Html.TextBoxFor(m => m.USER_DETAILS.EMAIL, new { id = "EMAIL", @class = "form-control input", @placeholder="Email" })
                     </div>
 
                     <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password">
-                        @Html.TextBoxFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "form-control input" })
+                        @Html.LabelFor(m => m.USER_DETAILS.PASSWORD, new { @class = "label" })
+                        @Html.PasswordFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "form-control input", @maxlength = 32 })
                     </div>
 
                     <div class="group">
+                        @Html.LabelFor(m => m.USER_DETAILS.PASSWORD, new { @class = "label" })
+                        @Html.PasswordFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "form-control input", @maxlength = 32 })
                         <label for="pass" class="label">Repeat Password</label>
                         <input id="pass" type="password" class="input" data-type="password">
                     </div>
