--- a/FoodHub/Views/Login/Index.cshtml
+++ b/FoodHub/Views/Login/Index.cshtml
@@ -73,6 +73,11 @@
                         <label for="pass" class="label">Repeat Password</label>
                         <input id="pass" type="password" class="input" data-type="password">
                     </div>
+                    <div class="group">
+                        <label for="user" class="label">DOB</label>
+                        <input type="text" name="startDate" value="" id="datepicker" class="form-control" data-dateformat="dd/mm/yy" placeholder="Date">
+                        @*@Html.TextBoxFor(m => m.USER_DETAILS.DOB, new { id = "datepicker", @class = "form-control input ", @dateformat = "dd/mm/yy" })*@
+                    </div>
 
                     <div class="group">
                         <input type="submit" class="button" value="Register Now">
