--- a/FoodHub/Views/Shared/_Layout.cshtml
+++ b/FoodHub/Views/Shared/_Layout.cshtml
@@ -61,38 +61,22 @@
                     <!-- Start Navigation List -->
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="index.html">Home</a>
-                            <ul class="dropdown">
-                                <li><a href="index.html">Home 1</a></li>
-                                <li><a href="index-02.html">Home 2</a></li>
-                                <li><a href="index-03.html">Home 3</a></li>
-                            </ul>
+                            @Html.ActionLink("Home","Index","Home")
+                            
                         </li>
-                        <li><a class="active" href="menu.html">Menu</a></li>
+                        <li>@Html.ActionLink("Menu", "Menu", "Home")</li>
                         <li>
                             <a href="#">Reservation</a>
-                            <ul class="dropdown">
-                                <li><a href="reservation-form-1.html">Reservation Form 1</a></li>
-                                <li><a href="reservation-form-2.html">Reservation Form 2</a></li>
-                            </ul>
+                            
                         </li>
                         <li>
                             <a href="#">Features</a>
-                            <ul class="dropdown">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="portfolio.html">Gallery</a></li>
-                                <li><a href="team.html">Team</a></li>
-                                <li><a href="404.html">404 Page</a></li>
-                            </ul>
+                           
                         </li>
                         <li><a href="contact.html">contact</a></li>
                         <li>
                             <a href="blog.html">Blog</a>
-                            <ul class="dropdown">
-                                <li><a href="blog.html">Page With right sidebar</a></li>
-                                <li><a href="left-sidebar.html">Page With left sidebar</a></li>
-                                <li><a href="single-post.html">Blog single post</a></li>
-                            </ul>
+                            
                         </li>
                     </ul>
                 </div>
@@ -101,37 +85,21 @@
                 <ul class="wpb-mobile-menu">
                     <li>
                         <a href="index.html">Home</a>
-                        <ul class="dropdown">
-                            <li><a href="index.html">Home 1</a></li>
-                            <li><a href="index-02.html">Home 2</a></li>
-                            <li><a href="index-03.html">Home 3</a></li>
-                        </ul>
+                        
                     </li>
                     <li><a class="active" href="menu.html">Menu</a></li>
                     <li>
                         <a href="#">Reservation</a>
-                        <ul class="dropdown">
-                            <li><a href="reservation-form-1.html">Reservation Form 1</a></li>
-                            <li><a href="reservation-form-2.html">Reservation Form 2</a></li>
-                        </ul>
+                      
                     </li>
                     <li>
                         <a href="#">Features</a>
-                        <ul class="dropdown">
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="portfolio.html">Gallery</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="404.html">404 Page</a></li>
-                        </ul>
+                        
                     </li>
                     <li><a href="contact.html">contact</a></li>
                     <li>
                         <a href="blog.html">Blog</a>
-                        <ul class="dropdown">
-                            <li><a href="blog.html">Page With right sidebar</a></li>
-                            <li><a href="left-sidebar.html">Page With left sidebar</a></li>
-                            <li><a href="single-post.html">Blog single post</a></li>
-                        </ul>
+                        
                     </li>
                 </ul>
                 <!-- Mobile Menu End -->
