--- a/FoodHub/Views/Home/Menu.cshtml
+++ b/FoodHub/Views/Home/Menu.cshtml
@@ -9,6 +9,48 @@
 <!-- Page Section Start -->
 <div class="page-container">
     <div class="container">
+
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-sx-12">
+                    <div class="menu-item">
+                        <div class="menu-left">
+                            <img src="assets/img/menu/img-01.jpg" alt="">
+                        </div>
+                        <div class="menu-right">
+                            <span class="price">$45</span>
+                            <h4>Rosted Chicken with Wine</h4>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
+                        </div>
+                    </div>
+                </div>            <div class="col-md-6 col-sm-6 col-sx-12">
+                    <div class="menu-item">
+                        <div class="menu-left">
+                            <img src="assets/img/menu/img-01.jpg" alt="">
+                        </div>
+                        <div class="menu-right">
+                            <span class="price">$45</span>
+                            <h4>Rosted Chicken with Wine</h4>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
 
             <!-- Left Menu -->
@@ -51,171 +93,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Left Menu -->
-            <div class="col-md-6 col-sm-6 col-sx-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-03.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Right Menu -->
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-04.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left Menu -->
-            <div class="col-md-6 col-sm-6 col-sx-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-05.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Right Menu -->
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-06.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left Menu -->
-            <div class="col-md-6 col-sm-6 col-sx-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-07.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Right Menu -->
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-08.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left Menu -->
-            <div class="col-md-6 col-sm-6 col-sx-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-05.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Right Menu -->
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-04.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
