--- a/FoodHub/Views/Shared/_Admin_Layout.cshtml
+++ b/FoodHub/Views/Shared/_Admin_Layout.cshtml
@@ -47,20 +47,21 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Master Entry
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <span>Category</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <h6 class="collapse-header" href="Admin_Category.cshtml">Item Category:</h6>
+                        <a onclick="return ShowAddDiv()" class="collapse-item" href="#">Add</a>
+                        <a onclick="return ShowEditDiv()" class="collapse-item" href="#">Edit</a>
+                        <a onclick="return ShowDelDiv()" class="collapse-item" href="#">Delete</a>
                     </div>
                 </div>
             </li>
@@ -322,7 +323,10 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <a href="#" onclick="return ShowAddDiv()" class="btn btn-success btn-circle" title="ADD">
+                            <i class="fas fa-check"></i>
+                        </a>
+                        <h3 class="h3 mb-0 text-gray-800">@ViewBag.Title</h3>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                     </div>
                     <div>
