--- a/FoodHub/Views/Shared/_Admin_Layout.cshtml
+++ b/FoodHub/Views/Shared/_Admin_Layout.cshtml
@@ -323,11 +323,13 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <a href="#" onclick="return ShowAddDiv()" class="btn btn-success btn-circle" title="ADD">
-                            <i class="fas fa-check"></i>
-                        </a>
                         <h3 class="h3 mb-0 text-gray-800">@ViewBag.Title</h3>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+                    </div>
+                    <div class="d-sm-flex align-items-center justify-content-start mb-4">
+                        <a href="#" onclick="return ShowAddDiv()" class="btn btn-primary btn-circle" title="ADD">
+                            <i class="fas fa-plus-circle"></i>
+                        </a>
                     </div>
                     <div>
                         @RenderBody()
