--- a/FoodHub/Views/Shared/_Admin_Category_All.cshtml
+++ b/FoodHub/Views/Shared/_Admin_Category_All.cshtml
@@ -21,7 +21,7 @@
                 <td>
                     <a href="#" id="Btnedit" class="btn btn-info btn-icon-split" dataid="@Q.CATE_CD" title="EDIT">
                         <span class="icon text-white-50">
-                            <i class="fas fa-info-circle"></i>
+                            <i class="fas fa-pen"></i>
                         </span>
                         <span class="text">Edit</span>
                     </a>
